name:                haskell-animation
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-animation#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Example
  build-depends:       base >= 4.7 && < 5, lens >= 4.15, JuicyPixels >= 3.2.8.1, Rasterific >= 0.7.2.1
  default-language:    Haskell2010

executable haskell-animation-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-animation, JuicyPixels >= 3.2.8.1
  default-language:    Haskell2010

test-suite haskell-animation-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskell-animation
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/haskell-animation
